--- a/css/style.css
+++ b/css/style.css
@@ -36,16 +36,21 @@
     font-size: 60px;
 }
 
-.absolute__right-box {
-    position: absolute;
-    top: 200px;
-    left: 640px;
-    z-index: 1;
+.absolute__right-box img {
+    position: relative;
+    bottom: 100px;
+        width: 100%;
+        height: 100%;
+        max-width: 800px;
+        margin-right: 0;
+        margin-left: auto;
+        display: block;
+        z-index: 1;
 }
 
 .relative__left-box {
-    position: relative;
-    top: 350px;
+    position: absolute;
+    top: 600px;
     width: 1000px;
     height: 210px;
     background-color: #00277E;
